# check_semantic_versioning

./: main.py  pyproject.toml
.github/workflows/: generate_tag.yml
