[tool.poetry]
name = "check-semantic-versioning"
version = "0.1.0"
description = ""
authors = ["kai-5908 <dolce.cantabile.maestoso@gmail.com>"]
readme = "README.md"
packages = [{include = "check_semantic_versioning"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
